ParserTesterClean1/ParserTesterClean1/src/uniandes/teolen/parserJavaCC/newParser/NuevoParser.java
/* Generated By:JavaCC: Do not edit this line. NuevoParser.java */
package uniandes.teolen.parserJavaCC.newParser;
import java.awt.Point;
import java.io.*;
import java.util.Vector;
import java.util.LinkedList;
import java.util.HashMap;
import java.util.HashSet;

public class NuevoParser implements NuevoParserConstants {

  final public void main() throws ParseException {
    jj_consume_token(ROBOT_R);
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case VARS:
      vars();
      break;
    default:
      jj_la1[0] = jj_gen;
      ;
    }
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case PROCS:
      procs();
      break;
    default:
      jj_la1[1] = jj_gen;
      ;
    }
    block();
  }

  final public void vars() throws ParseException {
 String var1, var2;
    jj_consume_token(VARS);
    var1 = jj_consume_token(NAME).image;
                                         token_source.variables.put(var1, "Undefined");
    label_1:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case 57:
        ;
        break;
      default:
        jj_la1[2] = jj_gen;
        break label_1;
      }
      jj_consume_token(57);
      var2 = jj_consume_token(NAME).image;
                                     token_source.variables.put(var2, "Undefined");
    }
    jj_consume_token(58);
  }

  final public void procs() throws ParseException {
    jj_consume_token(PROCS);
    label_2:
    while (true) {
      procDefinition();
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case NAME:
        ;
        break;
      default:
        jj_la1[3] = jj_gen;
        break label_2;
      }
    }
  }

  final public void procDefinition() throws ParseException {
 String procName;int cantidadParametros;
    //Funcion para crear procedimientos
    
      procName = jj_consume_token(NAME).image;
    jj_consume_token(59);
    jj_consume_token(60);
    cantidadParametros = parameters();
                                             saveProcInfo(procName.toLowerCase(), cantidadParametros);
    jj_consume_token(60);
    multipleExecution();
   token_source.variables_temporales = new HashMap < String,Integer > ();
    jj_consume_token(61);
  }

  final public int parameters() throws ParseException {
 String parameter1, parameter2;
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case NAME:
      parameter1 = jj_consume_token(NAME).image;
                                               token_source.variables_temporales.put(parameter1,0);
      label_3:
      while (true) {
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case 57:
          ;
          break;
        default:
          jj_la1[4] = jj_gen;
          break label_3;
        }
        jj_consume_token(57);
        parameter2 = jj_consume_token(NAME).image;
                                               token_source.variables_temporales.put(parameter2,0);
      }
      break;
    default:
      jj_la1[5] = jj_gen;
      ;
    }
           {if (true) return token_source.variables_temporales.size();}
    throw new Error("Missing return statement in function");
  }

  final public void saveProcInfo(String procName, int params) throws ParseException {
                        if (token_source.variables.containsKey(procName)){if (true) throw new Error("El procedimiento ya se declar\u00f3 como variable");}
                        else if (token_source.condiciones.contains(procName)){if (true) throw new Error("El procedimiento es una condici\u00f3n");}
                        else token_source.procedimientos.put(procName,params);
  }

  final public void block() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case 59:
      jj_consume_token(59);
      multipleExecution();
      jj_consume_token(61);
      break;
    case PUT:
    case PICK:
    case ASSIGNTO:
    case GOTO:
    case MOVE:
    case TURN:
    case FACE:
    case MOVETOTHE:
    case JUMPTOTHE:
    case MOVEINDIR:
    case JUMPINDIR:
    case NOP:
    case WHILE:
    case IF:
    case REPEAT:
    case NAME:
      singleExecution();
      break;
    default:
      jj_la1[6] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
  }

  final public void multipleExecution() throws ParseException {
    singleExecution();
    label_4:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case 58:
        ;
        break;
      default:
        jj_la1[7] = jj_gen;
        break label_4;
      }
      jj_consume_token(58);
      singleExecution();
    }
  }

  final public void singleExecution() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case WHILE:
    case IF:
    case REPEAT:
      controlStructure();
      break;
    case PUT:
    case PICK:
    case ASSIGNTO:
    case GOTO:
    case MOVE:
    case TURN:
    case FACE:
    case MOVETOTHE:
    case JUMPTOTHE:
    case MOVEINDIR:
    case JUMPINDIR:
    case NOP:
      declaredProcedureCall();
      break;
    case NAME:
      procedureCall();
      break;
    default:
      jj_la1[8] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
  }

  final public void procedureCall() throws ParseException {
 String procName;int cantidadParametros;
    /* 
    	  *Se llama un procedimiento del usuario
    	  *Se comprueba que el nombre este definido y tenga la cantidad justa de parametros
     	*/
              procName = jj_consume_token(NAME).image;
    jj_consume_token(62);
    cantidadParametros = declaredParameters();
            if (token_source.procedimientos.containsKey(procName.toLowerCase()) == false) {if (true) throw new Error("El procedimiento " + procName + " no esta definido " + token.beginLine);}
            else if (token_source.procedimientos.get(procName.toLowerCase()) != cantidadParametros) {if (true) throw new Error("Faltan o sobran parametros al llamar al procedimiento: " + procName);}
  }

  final public void controlStructure() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case IF:
      IF();
      break;
    case WHILE:
      WHILE();
      break;
    case REPEAT:
      REPEAT();
      break;
    default:
      jj_la1[9] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
  }

  final public int declaredParameters() throws ParseException {
 int cantidad = 0;String parameter1, parameter2;
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case NUM:
    case NAME:
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case NAME:
        parameter1 = jj_consume_token(NAME).image;
                                        checkParameters(parameter1.toLowerCase());
        break;
      case NUM:
        parameter1 = jj_consume_token(NUM).image;
        break;
      default:
        jj_la1[10] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
                                                                                                                cantidad++;System.out.println(cantidad);
      label_5:
      while (true) {
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case 57:
          ;
          break;
        default:
          jj_la1[11] = jj_gen;
          break label_5;
        }
        jj_consume_token(57);
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case NAME:
          parameter2 = jj_consume_token(NAME).image;
                                           checkParameters(parameter2.toLowerCase());
          break;
        case NUM:
          parameter2 = jj_consume_token(NUM).image;
          break;
        default:
          jj_la1[12] = jj_gen;
          jj_consume_token(-1);
          throw new ParseException();
        }
                                                                                                                  cantidad++;
      }
      break;
    default:
      jj_la1[13] = jj_gen;
      ;
    }
         {if (true) return cantidad;}
    throw new Error("Missing return statement in function");
  }

  final public void checkParameters(String parameter) throws ParseException {
    //Se revisa si un parametro esta definido o si es variable
    if (token_source.variables.containsKey(parameter) == false &&
    token_source.variables_temporales.containsKey(parameter) == false) {if (true) throw new Error(parameter + " no esta definido" + token_source.variables_temporales);}
  }

  final public void IF() throws ParseException {
    jj_consume_token(IF);
    jj_consume_token(62);
    conditionalCall();
    jj_consume_token(THEN);
    jj_consume_token(62);
    block();
    jj_consume_token(ELSE);
    jj_consume_token(62);
    block();
  }

  final public void WHILE() throws ParseException {
    jj_consume_token(WHILE);
    jj_consume_token(62);
    conditionalCall();
    jj_consume_token(DO);
    jj_consume_token(62);
    block();
  }

  final public void REPEAT() throws ParseException {
 int num;
    jj_consume_token(REPEAT);
    jj_consume_token(62);
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case NUM:
      num = num();
      break;
    case NAME:
      num = getVarNum();
      break;
    default:
      jj_la1[14] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
    block();
  }

  final public void declaredProcedureCall() throws ParseException {
 int n, Cx, Cy;String d, x, name, o;
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case ASSIGNTO:
      jj_consume_token(ASSIGNTO);
      jj_consume_token(62);
      n = num();
      jj_consume_token(57);
      name = jj_consume_token(NAME).image;
                   checkParameters(name.toLowerCase());
                   if (token_source.variables.containsKey(name)) token_source.variables.put(name, Integer.toString(n));
      break;
    case TURN:
      jj_consume_token(TURN);
      jj_consume_token(62);
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case AROUND:
        d = jj_consume_token(AROUND).image;
        break;
      case DIRECTION:
        d = jj_consume_token(DIRECTION).image;
        break;
      default:
        jj_la1[15] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
      break;
    case FACE:
      jj_consume_token(FACE);
      jj_consume_token(62);
      o = jj_consume_token(ORIENTATION).image;
      break;
    case GOTO:
      jj_consume_token(GOTO);
      jj_consume_token(62);
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case NUM:
        Cx = num();
        break;
      case NAME:
        Cx = getVarNum();
        break;
      default:
        jj_la1[16] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
      jj_consume_token(57);
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case NUM:
        Cy = num();
        break;
      case NAME:
        Cy = getVarNum();
        break;
      default:
        jj_la1[17] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
      break;
    case MOVE:
      jj_consume_token(MOVE);
      jj_consume_token(62);
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case NUM:
        n = num();
        break;
      case NAME:
        n = getVarNum();
        break;
      default:
        jj_la1[18] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
      break;
    case PUT:
      jj_consume_token(PUT);
      jj_consume_token(62);
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case NUM:
        n = num();
        break;
      case NAME:
        n = getVarNum();
        break;
      default:
        jj_la1[19] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
      jj_consume_token(57);
      x = jj_consume_token(ITEM).image;
      break;
    case PICK:
      jj_consume_token(PICK);
      jj_consume_token(62);
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case NUM:
        n = num();
        break;
      case NAME:
        n = getVarNum();
        break;
      default:
        jj_la1[20] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
      jj_consume_token(57);
      x = jj_consume_token(ITEM).image;
      break;
    case MOVETOTHE:
      jj_consume_token(MOVETOTHE);
      jj_consume_token(62);
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case NUM:
        n = num();
        break;
      case NAME:
        n = getVarNum();
        break;
      default:
        jj_la1[21] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
      jj_consume_token(57);
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case VIEW:
        d = jj_consume_token(VIEW).image;
        break;
      case DIRECTION:
        d = jj_consume_token(DIRECTION).image;
        break;
      default:
        jj_la1[22] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
      break;
    case MOVEINDIR:
      jj_consume_token(MOVEINDIR);
      jj_consume_token(62);
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case NUM:
        n = num();
        break;
      case NAME:
        n = getVarNum();
        break;
      default:
        jj_la1[23] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
      jj_consume_token(57);
      d = jj_consume_token(ORIENTATION).image;
      break;
    case JUMPTOTHE:
      jj_consume_token(JUMPTOTHE);
      jj_consume_token(62);
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case NUM:
        n = num();
        break;
      case NAME:
        n = getVarNum();
        break;
      default:
        jj_la1[24] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
      jj_consume_token(57);
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case VIEW:
        d = jj_consume_token(VIEW).image;
        break;
      case DIRECTION:
        d = jj_consume_token(DIRECTION).image;
        break;
      default:
        jj_la1[25] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
      break;
    case JUMPINDIR:
      jj_consume_token(JUMPINDIR);
      jj_consume_token(62);
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case NUM:
        n = num();
        break;
      case NAME:
        n = getVarNum();
        break;
      default:
        jj_la1[26] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
      jj_consume_token(57);
      d = jj_consume_token(ORIENTATION).image;
      break;
    case NOP:
      jj_consume_token(NOP);
      jj_consume_token(62);
      break;
    default:
      jj_la1[27] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
  }

  final public void conditionalCall() throws ParseException {
 int n; String x,d,o;
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case FACING:
      jj_consume_token(FACING);
      jj_consume_token(62);
      o = jj_consume_token(ORIENTATION).image;
      break;
    case CANPUT:
      jj_consume_token(CANPUT);
      jj_consume_token(62);
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case NUM:
        n = num();
        break;
      case NAME:
        n = getVarNum();
        break;
      default:
        jj_la1[28] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
      jj_consume_token(57);
      x = jj_consume_token(ITEM).image;
      break;
    case CANPICK:
      jj_consume_token(CANPICK);
      jj_consume_token(62);
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case NUM:
        n = num();
        break;
      case NAME:
        n = getVarNum();
        break;
      default:
        jj_la1[29] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
      jj_consume_token(57);
      x = jj_consume_token(ITEM).image;
      break;
    case CANMOVEINDIR:
      jj_consume_token(CANMOVEINDIR);
      jj_consume_token(62);
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case NUM:
        n = num();
        break;
      case NAME:
        n = getVarNum();
        break;
      default:
        jj_la1[30] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
      jj_consume_token(57);
      d = jj_consume_token(ORIENTATION).image;
      break;
    case CANJUMPINDIR:
      jj_consume_token(CANJUMPINDIR);
      jj_consume_token(62);
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case NUM:
        n = num();
        break;
      case NAME:
        n = getVarNum();
        break;
      default:
        jj_la1[31] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
      jj_consume_token(57);
      d = jj_consume_token(ORIENTATION).image;
      break;
    case CANMOVETOTHE:
      jj_consume_token(CANMOVETOTHE);
      jj_consume_token(62);
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case NUM:
        n = num();
        break;
      case NAME:
        n = getVarNum();
        break;
      default:
        jj_la1[32] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
      jj_consume_token(57);
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case VIEW:
        o = jj_consume_token(VIEW).image;
        break;
      case DIRECTION:
        o = jj_consume_token(DIRECTION).image;
        break;
      default:
        jj_la1[33] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
      break;
    case CANJUMPTOTHE:
      jj_consume_token(CANJUMPTOTHE);
      jj_consume_token(62);
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case NUM:
        n = num();
        break;
      case NAME:
        n = getVarNum();
        break;
      default:
        jj_la1[34] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
      jj_consume_token(57);
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case VIEW:
        o = jj_consume_token(VIEW).image;
        break;
      case DIRECTION:
        o = jj_consume_token(DIRECTION).image;
        break;
      default:
        jj_la1[35] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
      break;
    case NOT:
      jj_consume_token(NOT);
      jj_consume_token(62);
      conditionalCall();
      break;
    default:
      jj_la1[36] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
  }

  final public int num() throws ParseException, Error {
        int total = 1;
    jj_consume_token(NUM);
    try{
      total = Integer.parseInt(token.image);
      }
    catch (NumberFormatException ee){
      {if (true) throw new Error("No es posible convertir en numero: " + token.image + " !!");}
    }
    {if (true) return total;}
    throw new Error("Missing return statement in function");
  }

  final public int getVarNum() throws ParseException, Error {
 Token token;int number;
    token = jj_consume_token(NAME);
    //Se revisa si existe la variable
    checkParameters(token.image.toLowerCase());

    try{
          if (token_source.variables.containsKey(token.image.toLowerCase())) number = Integer.parseInt(token_source.variables.get(token.image.toLowerCase()));
          else number = token_source.variables_temporales.get(token.image.toLowerCase());
    }
    catch (NumberFormatException ee){
      {if (true) throw new Error("Variable con valor undefined" + token.beginLine + token_source.variables + token.image + token_source.variables_temporales);}
    }
    {if (true) return number;}
    throw new Error("Missing return statement in function");
  }

  /** Generated Token Manager. */
  public NuevoParserTokenManager token_source;
  SimpleCharStream jj_input_stream;
  /** Current token. */
  public Token token;
  /** Next token. */
  public Token jj_nt;
  private int jj_ntk;
  private int jj_gen;
  final private int[] jj_la1 = new int[37];
  static private int[] jj_la1_0;
  static private int[] jj_la1_1;
  static {
      jj_la1_init_0();
      jj_la1_init_1();
   }
   private static void jj_la1_init_0() {
      jj_la1_0 = new int[] {0x0,0x0,0x0,0x0,0x0,0x0,0x800c0000,0x0,0x800c0000,0x0,0x0,0x0,0x0,0x0,0x0,0x140,0x0,0x0,0x0,0x0,0x0,0x0,0xc0,0x0,0x0,0xc0,0x0,0x800c0000,0x0,0x0,0x0,0x0,0x0,0xc0,0x0,0xc0,0x7f800000,};
   }
   private static void jj_la1_init_1() {
      jj_la1_1 = new int[] {0x40000,0x80000,0x2000000,0x800000,0x2000000,0x800000,0x8f001ff,0x4000000,0xf001ff,0x700000,0x801000,0x2000000,0x801000,0x801000,0x801000,0x0,0x801000,0x801000,0x801000,0x801000,0x801000,0x801000,0x0,0x801000,0x801000,0x0,0x801000,0x1ff,0x801000,0x801000,0x801000,0x801000,0x801000,0x0,0x801000,0x0,0x0,};
   }

  /** Constructor with InputStream. */
  public NuevoParser(java.io.InputStream stream) {
     this(stream, null);
  }
  /** Constructor with InputStream and supplied encoding */
  public NuevoParser(java.io.InputStream stream, String encoding) {
    try { jj_input_stream = new SimpleCharStream(stream, encoding, 1, 1); } catch(java.io.UnsupportedEncodingException e) { throw new RuntimeException(e); }
    token_source = new NuevoParserTokenManager(jj_input_stream);
    token = new Token();
    jj_ntk = -1;
    jj_gen = 0;
    for (int i = 0; i < 37; i++) jj_la1[i] = -1;
  }

  /** Reinitialise. */
  public void ReInit(java.io.InputStream stream) {
     ReInit(stream, null);
  }
  /** Reinitialise. */
  public void ReInit(java.io.InputStream stream, String encoding) {
    try { jj_input_stream.ReInit(stream, encoding, 1, 1); } catch(java.io.UnsupportedEncodingException e) { throw new RuntimeException(e); }
    token_source.ReInit(jj_input_stream);
    token = new Token();
    jj_ntk = -1;
    jj_gen = 0;
    for (int i = 0; i < 37; i++) jj_la1[i] = -1;
  }

  /** Constructor. */
  public NuevoParser(java.io.Reader stream) {
    jj_input_stream = new SimpleCharStream(stream, 1, 1);
    token_source = new NuevoParserTokenManager(jj_input_stream);
    token = new Token();
    jj_ntk = -1;
    jj_gen = 0;
    for (int i = 0; i < 37; i++) jj_la1[i] = -1;
  }

  /** Reinitialise. */
  public void ReInit(java.io.Reader stream) {
    jj_input_stream.ReInit(stream, 1, 1);
